--- a/config/config.yml
+++ b/config/config.yml
@@ -10,12 +10,12 @@ login:
   realname: node.js rpc tipping bot
   nickserv_password: yourpass
 channels: 
-  - '#BotChannel'
+  - '#incakoin'
 log:
   file: bot.log
 rpc:
   host: localhost
-  port: rpc-port
+  port: 17422
   user: rpc-username
   pass: rpc-password
 coin:
@@ -23,8 +23,8 @@ coin:
   min_withdraw: 10
   min_confirmations: 3
   min_tip: 1
-  short_name: coin-shortname
-  full_name: coin-name
+  short_name: NKA
+  full_name: Incakoin
 webadmin:
   enabled: false
   port: 8080
@@ -33,7 +33,7 @@ webadmin:
 urlget:
   enabled: true
   channels:
-    - '#BotChannel'
+    - '#incakoin'
 joke:
   enabled: true
   url: http://api.icndb.com/jokes/random
@@ -41,27 +41,27 @@ random:
   enabled: true
   url: http://www.iheartquotes.com/api/v1/random?format=json&max_lines=1
 allcoin:
-  enabled: true
+  enabled: false
   coin: DOPE
   url: https://www.allcoin.com/api2/pair/DOPE_BTC
 allcoin2:
   url: https://www.allcoin.com/api2/pair/
 btc:
-  enabled: true
+  enabled: false
   coin: BTC
   url: https://btc-e.com/api/3/ticker/btc_usd
 cryptsy:
-  enabled: true
+  enabled: false
   coin: FST
   url: http://pubapi.cryptsy.com/api.php?method=singlemarketdata&marketid=44
 bittrex:
-  enabled: true
+  enabled: false
   coin: DOPE
   url: https://bittrex.com/api/v1.1/public/getmarketsummary?market=btc-dope
 bittrex2:
   url: https://bittrex.com/api/v1.1/public/getmarketsummary?market=
 git:
-  enabled: true
+  enabled: false
   host: '0.0.0.0'
   port: 3420
   channels:
@@ -87,13 +87,13 @@ commands:
     channel: true
   cryptsy:
     pm: false
-    channel: true
+    channel: false
   bittrex:
     pm: false
-    channel: true
+    channel: false
   btc:
     pm: false
-    channel: true
+    channel: false
   rain: 
     pm: false
     channel: true      
@@ -108,7 +108,7 @@ commands:
     channel: true
   terms:
     pm: false
-    channel: true
+    channel: false
   block:
     pm: false
     channel: true
